[tool.poetry]
name = "telegram_text"
version = "0.1.2"
description = "Python markup module for Telegram messenger. This module provides a rich list of components to build any possible markup fast and render it to specific html or MarkdownV2 formats."
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://telegram-text.alinsky.tech"
repository = "https://github.com/SKY-ALIN/telegram-text"
keywords = ["telegram", "markup", "markdown", "formating"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pylint = "^2.13.9"
pytest-cov = "^4.1.0"
Sphinx = "^4"
flake8 = "^5.0.4"
furo = "^2022.9.29"
m2r2 = "^0.3.2"
sphinx-copybutton = "^0.5.2"
no-optional = "^0.4.0"
isort = "^5.11.5"
mypy = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
