[tool.poetry]
name = "telegram_text"
version = "0.2.0"
description = "Python markup module for Telegram messenger. This module provides a rich list of components to build any possible markup fast and render it to specific html or MarkdownV2 formats."
authors = ["Vladimir Alinsky <Vladimir@Alinsky.tech>"]
license = "MIT"
readme = "README.md"
homepage = "https://telegram-text.alinsky.tech"
repository = "https://github.com/SKY-ALIN/telegram-text"
keywords = ["telegram", "markup", "markdown", "html", "formating"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"
Sphinx = "^7.1.2"
flake8 = "^7.0.0"
furo = "^2024.1.29"
m2r2 = "^0.3.3.post2"
sphinx-copybutton = "^0.5.2"
no-optional = "^0.4.0"
isort = "^5.13.2"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
